# Chatter

./: .gitignore
chatter/: .env.example  .env.local.example  .gitattributes  README.md  bash  docker-compose.local.yml  docker-compose.memory-llm.test.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
chatter/.github/: README.md
chatter/.github/workflows/: README.md  protocol-validation.yml
chatter/apps/: README.md
chatter/apps/chat_gateway/: Dockerfile  README.md
chatter/apps/persona_workers/: Dockerfile  README.md
chatter/apps/stream_context/: README.md
chatter/apps/stream_perceptor/: Dockerfile
chatter/apps/web_ui/: README.md  app.js  index.html  styles.css
chatter/configs/: README.md
chatter/configs/auto_commentary/: default.json
chatter/configs/memory/: default_policy.json
chatter/configs/moderation/: README.md  default.json
chatter/configs/observation_context/: default.json
chatter/configs/personas/: ClipGoblin.json  LoreMaster3000.json  README.md  SaltGremlin.json
chatter/configs/prompts/: README.md  drift_reflection.jsonprompt  durable_extraction.jsonprompt  message_generation.md
chatter/configs/rooms/: README.md  demo.json
chatter/configs/schemas/: auto_commentary.schema.json  llm_provider.schema.json  memory_policy.schema.json  moderation.schema.json  (+4 more)
chatter/data/: README.md
chatter/docs/: README.md  stream_capture.md
chatter/infra/: README.md
chatter/prompts/: README.md  manifest.json
chatter/scripts/: README.md  validate_llm_artifacts.py  validate_memory_artifacts.py
(+139 files in other folders)
