[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatter"
version = "0.0.0"
description = "Chatter utilities"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.0.0"]

[project.scripts]
validate-protocol-schemas = "scripts.ops.validate_protocol_schemas:main"

[tool.setuptools.packages.find]
include = ["scripts*"]
